# SPDX-FileCopyrightText: 2026 github.com/aburow
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "ups2mqtt"
version = "0.1.0rc4"
description = "ups2mqtt bridge runtime"
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.10.1",
  "Jinja2==3.1.6",
  "paho-mqtt==2.1.0",
  "pymodbus==3.8.6",
  "pysnmp==7.1.21",
  "PyYAML==6.0.2",
]

[dependency-groups]
lint = [
  "grain-lint==0.2.0",
  "pre-commit>=4.5.0,<5",
  "pytest>=8,<9",
  "ruff==0.15.4",
  "semgrep==1.156.0",
  "sqlfluff==3.4.2",
  "yamllint==1.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
